# Current

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Current.vcxproj  Current.vcxproj.filters  KVStorage-design-doc.md  Makefile  README.md  Symbols.md  TODO.txt  current.h  dashboard.cc  design-doc.md  example.cc  exception.h  fncas.cc  fncas.h  http_server.cc  kv_storage.h  log_collector.h  port.h  readme.txt  sherlock.h  test.cc
Blocks/: Makefile  README.md  exceptions.h
Bricks/: Makefile  README.md  exception.h
CompactTSV/: compacttsv.h  gen.cc  gen.h  pack.cc  test.cc  unpack.cc  unpack_fast.cc  unpack_peek.cc
EventCollector/: README.md  event_collector.h  example.cc  port.h  test.cc
Flow/: README.md  flow.h  lazy_instantiation.h  test.cc
FnCAS/: LICENSE  Makefile  README.md  TODO.txt  fncas.h  test.cc
Integrations/: exceptions.h
Karl/: Makefile  README.md  claire.h  constants.h  exceptions.h  karl.h  locator.h  render.h  respond_with_schema.h  schema.h  schema_claire.h  schema_karl.h  service_annotator.h  service_filter.h  service_generator.h  service_is_prime.h  service_schema.h  test.cc
Midichlorians/: MidichloriansDataDictionary.h  test.cc  test2.cc
PSYKHANOOL/: PSYKHANOOL.h  sfinae.h  test.cc
Profiler/: profiler.h
Reflection/: base.h  basic_types.dsl.h  crc32.h  primitive_types.dsl.h  reflection.h  struct.h  super.h  test.cc  types.h
RipCurrent/: ripcurrent.h  test.cc  types.h
Serialization/: json.h  test.cc
Sherlock/: Dashboard  Makefile  README.md  dashboard.cc  dashboard.cc_  design-doc.md  exceptions.h  extract_timestamp.h  filter.h  pubsub.h  replicator.h  sfinae.h  sherlock.h  signature.h  stream_data.h  stream_impl.h  test.cc
SimpleServer/: README.md  example.cc  log_collector.h  test.cc
Storage/: README.md  REST-API.md  TestStorage.vcxproj.filters  api.h  api_base.h  api_types.h  base.h  exceptions.h  replicator.h  rest.h  semantics.h  sfinae.h  storage.h  test.cc  transaction.h  transaction_policy.h  transaction_result.h
TransactionalStorage/: base.h  exceptions.h  sfinae.h  storage.h  test.cc
TypeSystem/: Evolution.md  README.md  base.h  enum.h  exceptions.h  golden  helpers.h  optional.h  optional_result.h  polymorphic.h  primitive_types.dsl.h  remove_parentheses.h  sfinae.h  struct.h  test.cc  timestamp.h  typename.h  types.h  variant.h
VisualStudioSolution/: Bricks.sln
Yoda/: DOCU.md  gen-docu.sh  metaprogramming.h  sfinae.h  test.cc  types.h  yoda.h
blocks/: Makefile  README.md
bricks/: README.md  exception.h
cerealize/: Makefile  cerealize.h  cerealize.vcxproj  exceptions.h  test.cc  test_event_base.h
cmake/: CMakeLists.txt  Makefile  README.md  run-cmake-test.sh
cmake/q/q/q/: run-cmake-test.sh
compact_tsv/: gen.cc  pack.cc  test.cc  unpack.cc  unpack_fast.cc  unpack_peek.cc
compacttsv/: compacttsv.h  port.h  test.cc
contributors/: CLA.md  README.md  cla.md
demo/: Makefile  demo.cc
deprecated_test/: eval.cc  function.h
dflags/: .gitignore  Makefile  demo1.cc  demo2.cc  demo3.cc  dflags.h  dflags.sln  dflags.vcxproj  test.cc
docu/: docu_00.md  docu_00_header.md  docu_00_releases.md  docu_99.md
event_collector/: test.cc
file/: Makefile  exceptions.h  file.h  file.sln  file.vcxproj  test.cc
fncas/: .gitignore  JIT.md  LICENSE  Makefile  README.md  TODO.txt  base.h  differentiate.h  dummy.cc  fncas.h  fncas_base.h  fncas_differentiate.h  fncas_jit.h  fncas_mathutil.h  fncas_node.h  fncas_optimize.h  jit.h  mathutil.h  node.h  optimize.h  test.cc
graph/: gnuplot.h  plotutils.h  regenerate_flag.cc  test.cc
integrations/: exceptions.h
iris/: iris.h
java_wrapper/: Makefile  java_wrapper.cc  java_wrapper.h
karl/: claire.h  constants.h  exceptions.h  karl.h  locator.h  render.h  respond_with_schema.h  schema_claire.h  schema_karl.h  test.cc
midichlorians/: midichlorians_data_dictionary.h  test.cc
net/: LICENSE  Makefile  curl_based_test.cc  debug_log.h  exceptions.h  http.h  http_response_codes.h  posix_http_server.h  posix_tcp_server.h  posix_tcp_server_test.cc  tcp.h  telnet_based_test.cc
nlp/: indent-all.sh  nlp.h  nlp_schema_begin.inl  nlp_schema_end.inl  test.cc
optionally_owned/: Makefile  optionally_owned.h  test.cc
plotutils/: graph.h  test.cc
profiler/: profiler.h
ripcurrent/: ripcurrent.h  test.cc  types.h
rtti/: Makefile  dispatcher.h  exceptions.h  rtti.sln  rtti.vcxproj  test.cc
scripts/: Makefile  MakefileImpl  MakefileWithCurrentBuild  check-all-headers.sh  check-headers-within-dir.sh  check-headers.sh  coverage-report.sh  full-test.sh  fullpath.sh  gen-current-build-json.sh  gen-current-build.sh  gen-docu.sh  gen-readme.sh  gen_all_vcxprojs.sh  gen_vcxproj.sh  gen_vcxproj_body.sh  github-install.sh  indent.sh  individual-tests.sh  install-gcc-on-semaphore.sh
src/: .gitignore  Makefile  fncas.h  fncas_base.h  fncas_jit.h
static/: knowsheet-demo.html
storage/: TestStorage.vcxproj  api.h  api_types.h  base.h  exceptions.h  semantics.h  storage.h  test.cc  test_helpers.cc  transaction_policy.h
stream/: dashboard.cc_  design-doc.md  exceptions.h  pubsub.h  replicator.h  sherlock.h  stream.h  stream_impl.h  test.cc
string/: Makefile  printf.h
strings/: KnowSheetDir.sh  Makefile  distance.h  fixed_size_serializer.h  join.h  printf.h  split.h  strings.vcxproj  test.cc  util.h
template/: combine.h  is_tuple.h  mapreduce.h  metaprogramming.h  pod.h  rmref.h  rtti_dynamic_call.h  test.cc  visitor.h  weed.h
test/: .gitignore  Makefile  eval.cc  function.h  run.sh  run_test.sh  test.cc
time/: Makefile  chrono.h  test.cc  time.vcxproj
typesystem/: Evolution.md  README.md  base.h  enum.h  exceptions.h  helpers.h  optional.h  optional_result.h  primitive_types.dsl.h  struct.h  test.cc  timestamp.h  typename.h  types.h  typesystem.vcxproj  variant.h
util/: Makefile  make_scope_guard.h  sha256.h  singleton.h  test.cc  util.h  util.vcxproj
variadic/: variadic.h  visitor.h
waitable_atomic/: test.cc  waitable_atomic.h
yoda/: DOCU.md  README.md  exceptions.h  gen-docu.sh  meta_yoda.h  metaprogramming.h  policy.h  sfinae.h  test.cc  test_types.h  (+2 more)
(+1790 files in other folders)
